--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/icon.ico" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brosup Digital Mailbox</title>
+    <title>BROSUP DIGITAL MAILBOX</title>
   </head>
   <body>
     <div id="root"></div>
